# Hospital_Queue_Management_System

./: next
backend/: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  check_tables.py  check_version.py  database.py  docker_compose.txt  dockerfile.txt  env_example.sh  locustfile.py  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  test_device_token.py  test_queue_update.py
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  0c6b2e31c766_initial_schema.py  1b70319991b0_add_device_token_and_patient_settings.py  222cc60d5f70_test_migration.py  36b6e8a2d415_add_bio_education_experience_to_doctor.py  39ffd2fb0e65_add_queue_identifier_field.py  452b13b5ab78_add_notification_template_and_update_.py  6a87ce0d8d82_added_notes_and_notes_and_.py  99955f171d45_update_appointments_for_reason.py  9dea795668ed_add_device_token_and_patient_settings.py  acf30b03052d_add_emergency_contact_details.py  be85d335a830_update_appointments_for_reason.py  dde091e5c4be_add_shift_times_to_doctor.py  dfccd0b618e4_initial_table_creation.py  e2618bd275c7_add_bio_education_experience_to_doctor.py  e9ab91c7218a_add_doctor_id_patient_it_to_queue.py
backend/api/: dependencies.py
backend/api/core/: config.py  security.py
backend/api/routes/: __init__.py  admin.py  auth.py  doctor.py  health.py  notifications.py  patient.py  staff.py  sync.py  websocket.py
backend/app/: main.py  models.py
backend/app/api/v1/routers/: auth.py  health.py
backend/app/api/v1/schemas/: patient.py
backend/app/core/: config.py  database.py  security.py
backend/models/: __init__.py
backend/schemas/: __init__.py  sync.py
backend/scripts/: check_version.py  create_doctor_profile.py  dev_commands.bat  fix_doctor_user_relationship.py  fix_timestamps.py  init_db_sql.sql  repair_admin.py  run_api_tests.bat  run_tests.py  seed_data.py  setup_admin.py  test_api_routes.py  test_system.py  test_system_targeted.py  test_targeted.py
backend/services/: __init__.py  analytics_service.py  appointment_analytics.py  appointment_service.py  audit_service.py  auth_service.py  doctor_analytics.py  doctor_service.py  notification_service.py  queue_analytics.py  queue_service.py  sync_service.py  system_analytics.py
backend/tests/: conftest.py  test_auth.py  test_patients.py
backend/utils/: datetime_utils.py
docs/: API_Integration_Plan.md  API_Integration_Progress.md  API_Integration_Progress_Update.md  AUTOMATIC_DOCTOR_ASSIGNMENT.md  Implementation_Plan.md  Implementation_Plan_Detailed.md  Patients Queue Design.docx  Step10_Monitoring_Logging.md  Step11_Testing_QA.md  Step1_Data_Layer.md  Step2_Backend_API_Layer.md  Step3_Service_Business_Logic_Layer.md  Step4_Web_Client_Layer.md  Step5_Mobile_App_Layer.md  Step6_Notifications_Layer.md  Step7_Security_Authentication_Layer.md  Step8_Offline_Sync_Caching_Layer.md  Step9_DevOps_Infrastructure.md  db_setup.sql
docs/new/: backend_implementation_guide.md  backend_implementation_progress.md  backend_optimization_suggestions.md  full_implementation_plan.md  test_scripts_README.md  updated_backend_architecture.md
frontend/Mobile/: .gitignore  App.tsx  README.md  app.json  jest.config.js  package-lock.json  package.json  setupTests.js  tsconfig.json
frontend/Mobile/__tests__/: App.test.tsx
frontend/Mobile/docs/: API_Integration_Plan.md  API_Integration_Progress.md  FIREBASE_SETUP.md  Mobile_API_Integration_Plan.md  Mobile_App_Implementation_Plan.md  Offline_Support_Implementation.md
frontend/shared/: .gitignore  index.ts  package.json  tsconfig.json  types.ts
frontend/web-app/: .env  README.md  index.html  jest.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.test.json  tsconfig.tsbuildinfo  vite.config.ts
(+451 files in other folders)
